handler fixed from abdulaziz
